crates/zendriver-mcp/tests/snapshots/schema_snapshots__expect_snaps__expect_cancel_in.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::expect::CancelInput)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: CancelInput
description: "Input for `browser_expect_cancel`."
type: object
properties:
  expectation_id:
    description: "Id returned by an earlier `browser_expect_register` call."
    type: string
additionalProperties: false
required:
  - expectation_id
