crates/zendriver-mcp/tests/snapshots/schema_snapshots__expect_snaps__expect_matcher.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::expect::ExpectMatcher)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: ExpectMatcher
description: "URL match predicate for request/response expectations. Dialog and\nDownload kinds ignore matcher fields entirely (the lib has no URL filter\nfor them in v0).\n\nExactly zero or one of `url_substr` / `url_regex` may be set. Setting\nneither matches every URL (substring matcher with the empty string)."
type: object
properties:
  url_regex:
    description: "Regex matcher — match if `regex::Regex::is_match(url)` returns true.\nCompiled inside `_register`; an invalid regex surfaces as an\ninvalid-request error."
    type:
      - string
      - "null"
    default: ~
  url_substr:
    description: Substring matcher — match if request URL contains this needle.
    type:
      - string
      - "null"
    default: ~
additionalProperties: false
