crates/zendriver-mcp/tests/snapshots/schema_snapshots__expect_snaps__expect_register_in.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::expect::RegisterInput)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: RegisterInput
description: "Input for `browser_expect_register`."
type: object
properties:
  dialog_action:
    description: "Dialog only: drive the matched dialog (`accept` / `dismiss`) instead\nof leaving it open for observation only. Decided here, at register\ntime, because the matched dialog handle is consumed by the spawned\ntask."
    anyOf:
      - $ref: "#/$defs/DialogAction"
      - type: "null"
  dialog_prompt_text:
    description: "Dialog only: prompt answer for `dialog_action: accept` on a `prompt`."
    type:
      - string
      - "null"
  fetch_body:
    description: "Response only: fetch the response body and include it (base64) in the\nmatched event as `body_base64` + `body_len`. One extra CDP round-trip."
    type: boolean
    default: false
  kind:
    description: Which event family to watch.
    $ref: "#/$defs/ExpectKind"
  matcher:
    description: URL matcher (request/response only — ignored for dialog/download).
    anyOf:
      - $ref: "#/$defs/ExpectMatcher"
      - type: "null"
  pre_await_timeout_ms:
    description: "Inner timeout applied to the lib's `.timeout(d)` call. Generous by\ndefault (60s) so the user has time to call the action tool that\ntriggers the event between `register` and `await`."
    type: integer
    format: uint64
    default: 60000
    minimum: 0
  save_to:
    description: "Download only: copy the completed download to this path on the MCP\nhost; the matched event reports it as `saved_path`."
    type:
      - string
      - "null"
additionalProperties: false
required:
  - kind
$defs:
  DialogAction:
    description: "How to drive a matched JavaScript dialog (`kind: dialog` only).\n\nApplied by the spawned task the instant the dialog opens — so the page's\nblocking `alert()` / `confirm()` / `prompt()` call returns promptly and\nthe matched event carries the chosen action. Omitting `dialog_action`\nleaves the dialog untouched: the matched handle is dropped without\ndispatching `Page.handleJavaScriptDialog` (`MatchedDialog` has no `Drop`\nimpl, so nothing is sent to Chrome), so the dialog stays open and the\npage's blocking JS call does not return until something else resolves\nit. Use this to merely observe that a dialog opened without acting on\nit."
    oneOf:
      - description: "Accept the dialog. For a `prompt`, submit `dialog_prompt_text` (or the\ndialog's default value when that is unset)."
        type: string
        const: accept
      - description: Dismiss / cancel the dialog.
        type: string
        const: dismiss
  ExpectKind:
    description: "Which `Page.*` / `Network.*` family the expectation listens on."
    oneOf:
      - description: "`Network.requestWillBeSent` — outgoing request, no body fetch."
        type: string
        const: request
      - description: "`Network.responseReceived` — incoming response headers (no body in v0)."
        type: string
        const: response
      - description: "`Page.javascriptDialogOpened` — alert/confirm/prompt/beforeunload."
        type: string
        const: dialog
      - description: "`Page.downloadWillBegin` — start of a file download."
        type: string
        const: download
  ExpectMatcher:
    description: "URL match predicate for request/response expectations. Dialog and\nDownload kinds ignore matcher fields entirely (the lib has no URL filter\nfor them in v0).\n\nExactly zero or one of `url_substr` / `url_regex` may be set. Setting\nneither matches every URL (substring matcher with the empty string)."
    type: object
    properties:
      url_regex:
        description: "Regex matcher — match if `regex::Regex::is_match(url)` returns true.\nCompiled inside `_register`; an invalid regex surfaces as an\ninvalid-request error."
        type:
          - string
          - "null"
        default: ~
      url_substr:
        description: Substring matcher — match if request URL contains this needle.
        type:
          - string
          - "null"
        default: ~
    additionalProperties: false
